@@ -10,6 +10,10 @@ not yet  BJH  Release 10.38.0
 
               pambackground: recognize mid-row background.
 
+              ppm3d: Add -color option.
+
+              ppm3d: Add -offset option as alternative to offset argument.
+
               giftopnm: Add -repair option.
 
               libnetpbm: in the "no such option" error message, say what
